package br.edu.ifpe.ead.si;

import java.time.LocalDateTime;

public interface Entrada {
    Placa placa();
    LocalDateTime dataHora();
}
