package br.edu.ifpe.ead.si;

import java.time.LocalDateTime;

public interface Saida {
    Placa placa();
    LocalDateTime dataHora();
}
